--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
       height: 100vh;
     }
     .container {
-      background: white;
+      background: #C3C9E9;
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
